# docent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docent.cabal  hie.yaml
src/Docent/: Algebra.hs  FreeVars.hs  Ident.hs  Lang.hs  Optics.hs  Stdlib.hs  Sum.hs  Type.hs  Typecheck.hs  Util.hs
src/Docent/Syntax/: Existential.hs  Fixpoint.hs  Mu.hs  Prog.hs  Record.hs  StrLit.hs  Universal.hs  Variant.hs
test/: Main.hs
