cabal-version:      3.14
name:               docent
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Patrick Thomson
maintainer:         patrick.william.thomson@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared
    default-language: GHC2024
    ghc-options: -Wall -fsimpl-tick-factor=300
    build-depends:   base ^>= 4.22
                   , intern
                   , text
                   , fused-effects


library
    import:           shared
    exposed-modules:  Docent.Ident
                      Docent.Sum
                      Docent.Type
                      Docent.Algebra
                      Docent.Syntax.Fixpoint
                      Docent.Syntax.StrLit
                      Docent.Syntax.Prog
                      Docent.Syntax.Record
                      Docent.Syntax.Variant
                      Docent.Lang
    build-depends:    Stream
                    , bound
                    , ordered-containers
                    , prettyprinter
    hs-source-dirs:   src

test-suite docent-test
    import:           shared
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    docent
                    , hedgehog
                    , ordered-containers
                    , tasty
                    , tasty-hedgehog
